# pikos

./: .dependency-cruiser.cjs  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  RELEASING.md  eslint.config.js  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.base.json  turbo.json
.agent/: BACKLOG.md  BACKLOG_ACTIVE.md  BACKLOG_DISTRIBUTION.md  BACKLOG_P2.md  BACKLOG_P3.md  BACKLOG_POST_LAUNCH.md  CURRENT.md  GTM.md  decisions.md
.agent/features/: app-store-listing.md  calendar.md  editor.md  extensibility.md  feedback-system.md  import.md  marketing-site.md  metadata.md  multi-select.md  notifications.md  react-migration.md  recurring-completion.md  search.md  sidebar.md  storage.md  tags.md  test-strategy.md
.agent/guides/: cloudflare-email-setup.md  fider-coolify-setup.md
.agent/skills/create-plan/: SKILL.md
.agent/skills/gh-fix-ci/: SKILL.md
.agent/skills/keyboard-shortcut/: SKILL.md
.agent/skills/monorepo-setup/: SKILL.md
.agent/skills/new-feature/: SKILL.md
.agent/skills/react-patterns/: SKILL.md
.agent/skills/shadcn-component/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
.agent/skills/tauri-command/: SKILL.md
.claude/commands/: commit.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: _validate.yml  ci.yml  close-prs.yml  release.yml
.husky/: pre-commit  pre-push
apps/brand/: README.md  contact-sheet.html
apps/brand/src/: render.py
apps/desktop/: README.md  index.html  package.json  playwright.config.ts  playwright.perf.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: a11y.spec.ts  boot.spec.ts  calendar.spec.ts  cross-feature.spec.ts  editor.spec.ts  empty-states.spec.ts  find-in-page.spec.ts  fixtures.ts  folders.spec.ts  import.spec.ts  keyboard.spec.ts  metadata-editing.spec.ts  multi-select.spec.ts  pages.spec.ts  perf-helpers.ts  perf.prod.spec.ts  perf.spec.ts  persistence.spec.ts  placeholder.spec.ts  quick-add.spec.ts  record-hero.spec.ts  recurring.spec.ts  search.spec.ts  settings-roundtrip.spec.ts  settings.spec.ts  sorting.spec.ts  tier1.spec.ts  tier2.spec.ts  views.spec.ts  virtual-list.spec.ts
apps/desktop/scripts/: record-hero.sh  screenshot-calendar.mjs
apps/desktop/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_drop_duration_mins.sql  003_tags_normalize.sql  004_soft_delete.sql  005_folder_soft_delete.sql  006_notifications.sql  007_reminder_none_sentinel.sql
apps/desktop/src-tauri/src/: lib.rs  logging.rs  main.rs  markdown.rs  window_state.rs
apps/desktop/src-tauri/src/db/: assets.rs  dev.rs  folders.rs  mod.rs  notifications.rs  pages.rs  schedules.rs  search.rs  tags.rs  watch.rs  workflows_tests.rs
apps/desktop/src-tauri/src/db/assets/: assets.rs  tests.rs
apps/desktop/src-tauri/src/db/dev/: dev.rs  tests.rs
apps/desktop/src-tauri/src/db/folders/: folders.rs
apps/desktop/src-tauri/src/db/pages/: pages.rs
apps/desktop/src-tauri/src/db/schedules/: schedules.rs
apps/desktop/src-tauri/src/db/search/: search.rs
apps/desktop/src-tauri/src/error/: error.rs
apps/desktop/src-tauri/src/logging/: logging.rs  tests.rs
apps/desktop/src-tauri/src/markdown/: markdown.rs  tests.rs
apps/desktop/src-tauri/src/notifications/: macos.rs  mod.rs  scheduler.rs
apps/desktop/src-tauri/src/notifications/scheduler/: scheduler.rs  tests.rs
apps/desktop/src/__tests__/: WorkspaceContext.test.tsx  placeholder.test.tsx
apps/desktop/src/keyboard/: registry.ts
apps/desktop/src/shared/: ErrorBoundary.tsx  logger.test.ts  logger.ts
apps/desktop/src/test/: setup.ts  (+1 more)
apps/marketing/: .env.example  README.md  astro.config.mjs  package.json
apps/marketing/public/: llms.txt  robots.txt
apps/marketing/scripts/: build-og.mjs  send-launch.mjs
apps/mobile/: package.json
crates/pikos-cli/: Cargo.toml  README.md
crates/pikos-cli/src/: main.rs
crates/pikos-cli/tests/: cli.rs
crates/pikos-db/: Cargo.toml
crates/pikos-db/migrations/: 008_tags_nocase.sql  009_tags_lowercase.sql
crates/pikos-db/src/: error.rs  error_tests.rs  folders.rs  folders_tests.rs  lib.rs  notification_log.rs  notification_log_tests.rs  pages.rs  pages_concurrency_tests.rs  pages_tests.rs  pool.rs  pool_tests.rs  reminders.rs  reminders_tests.rs  schedules.rs  schedules_tests.rs  search.rs  search_tests.rs  tags.rs  tags_tests.rs  tx.rs  tx_tests.rs
docs/: privacy-audit-2026-05-03.md
scripts/: bundle-check.sh  check-bundle-size.sh  check.sh  cleanup-builds.sh  qa-build.sh  release-retry.sh  release.sh  require-green-ci.sh  reset-launch-services.sh  seed-dst.py  seed-files.js  source-audit.sh  tsconfig.json  validate.sh  verify.sh
scripts/seed/: _db.ts  index.ts  seed-demo-marketing.ts  seed-demo.ts  seed-dst.ts  seed-realistic.ts  seed-stress.ts  seed-tutorial.ts
src/: app.html
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ContentPanel.svelte  FolderSidebar.svelte  PagesList.svelte
src/components/Content/: Content.svelte  ContentHeader.svelte  MarkdownEditor.svelte
src/components/Dropdown/: Dropdown.svelte
src/components/Folders/: Folders.svelte
src/components/Modal/: ModalSwitch.svelte
src/components/Modals/: PageSwitcher.svelte
src/components/Pages/: Pages.svelte  PagesHeader.svelte
src/keyboard/: actions.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: appStore.ts  fileSystemActions.ts  fileSystemStore.ts  recentPagesStore.ts  uiStore.ts
(+354 files in other folders)
