[package]
name = "pikos-cli"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Pikos command-line interface — headless access to the local workspace, over pikos-db."

[[bin]]
name = "pikos"
path = "src/main.rs"

[dependencies]
pikos-db = { path = "../pikos-db" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
iana-time-zone = "0.1"

[dev-dependencies]
pikos-db = { path = "../pikos-db" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
